--- a/ChurchResourceManagerWeb/Views/Shared/_Layout.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div id="mainContainer" name="mainContainer" class="container body-content">
         @RenderBody()
         <hr />
         <footer>
