--- a/ChurchResourceManagerWeb/Views/Membership/AddMembership.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/AddMembership.cshtml
@@ -7,7 +7,7 @@
 <div ng-controller="membershipController as mc">
     <div class="container">
         <div class="row">
-            <add-membership genders="mc.genders" marital-statuses="mc.maritalStatuses" state-list="mc.stateList", member-groups="mc.memberGroups"></add-membership>
+            <add-membership on-save="mc.doSaveMembership(membershipRecord)" genders="mc.genders" marital-statuses="mc.maritalStatuses" state-list="mc.stateList", member-groups="mc.memberGroups"></add-membership>
         </div>
     </div>
 </div>
